--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1 class="page-title">Courtney Ashley Farzam</h1>
         <!-- Navigation -->
-        <nav class="navbar">
+        <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
