used flexbox to center each section

--- a/index.html
+++ b/index.html
@@ -28,29 +28,37 @@
 
         <div class="page-one">
             <section id="home">
-            <h2 class="greeting"></h2>
+            <h2 class="greeting">yoooo</h2>
+            <p>Here's some stuff to look at</p>
             </section>
         </div>
 
         <div class="page-two">
             <section id="about">
-            <h2 class="bio-elements"></h2>
+            <h2 class="bio-elements">yooooo</h2>
+            <p>Here's some stuff to look at</p>
             </section>
         </div>
 
         <div class="page-three">
             <section id="portfolio">
-            <h2 class="portfolio-elements"></h2>
+            <h2 class="portfolio-elements">yppppppp</h2>
+            <p>Here's some stuff to look at</p>
             </section>
         </div>
 
         <div class="page-four">
             <section id="contact">
-            <h2 class="contact-me"></h2>
+            <h2 class="contact-me">yooooooo</h2>
+            <p>Here's some stuff to look at</p>
             </section>
         </div>
 
     </main>
+
+    <footer>
+        Made with love and CSS
+    </footer>
 
 
 
