--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Courtney Ashley</title>
   <link rel="stylesheet" href="./assets/reset.css" />
-  <link rel="stylesheet" href="./assets/style." />
+  <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
 <div class="wrapper">
