added picture and configured margin and padding for home section

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
  
         <!-- Navigation -->
     <nav>
-        <img src="./assets/images/draw_svg20210507-22909-1hsvy72.svg.png" />
+        <img src="./assets/images/draw_svg20210507-22909-1hsvy72.svg.png" class="background" />
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">My Works</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -29,6 +29,7 @@
 
     <div class="page-one">
         <section id="home">
+            <img src="./assets/images/IMG_0344.jpg" class="hello-pic" />
             <h2 class="greeting">yoooo</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
