too many changes to note

--- a/index.html
+++ b/index.html
@@ -16,36 +16,47 @@
  
         <!-- Navigation -->
     <nav>
-        <img src="./assets/images/draw_svg20210507-22909-1hsvy72.svg.png" class="background" />
+        <img src="./assets/images/logo.png" alt="logoAF" class="logo" />
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">My Works</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">my work</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
     </nav>
 
-
+    <main>
 
     <div class="page-one">
         <section id="home">
-            <img src="./assets/images/IMG_0344.jpg" class="hello-pic" />
-            <h2 class="greeting">yoooo</h2>
+            <img src="./assets/images/profile.jpg" alt="profileAF" class="hello-pic" />
+            <h2 class="greeting">courtney ashley farzam</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
 
     <div class="page-two">
         <section id="about">
-            <h2 class="bio-elements">yooooo</h2>
+            <h2 class="bio-elements">yoooooo</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
-
+    
     <div class="page-three">
         <section id="portfolio">
-            <h2 class="portfolio-elements">yoooooo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2 class="portfolio-elements">my work</h2>
+                <a href="https://github.com/cmash93" target="blank"><img src="./assets/images/coding.jpg" alt="codingAF" class="github" /></a>
+                    <div class="github-text">
+                    <h3>GitHub</h3>
+                    </div>
+                <a href="#" target="blank"><img src="./assets/images/placeholder3.jpg" alt="placeholder1" class="placeholder-one" /></a>
+                    <div class="placeholder-text-one">
+                    <h3>TBD</h3>
+                    </div>
+                <a href="#" target="blank"><img src="./assets/images/placeholder1.jpg" alt="placeholder2" class="placeholder-two" /></a>
+                    <div class="placeholder-text-two">
+                    <h3>TBD</h3>
+                    </div>
         </section>
     </div>
 
@@ -55,6 +66,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
+
+    </main>
 
 </body>
 
