--- a/index.html
+++ b/index.html
@@ -16,53 +16,54 @@
  
         <!-- Navigation -->
     <nav>
-        <img src="./assets/images/logo.png" alt="logoAF" class="logo" />
+       <img src="./assets/images/logo.png" class="logo" />
         <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">my work</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#page-one">home</a></li>
+            <li><a href="#page-two">about</a></li>
+            <li><a href="#page-three">my work</a></li>
+            <li><a href="#page-four">contact</a></li>
         </ul>
     </nav>
 
     <main>
 
-    <div class="page-one">
+    <div id="page-one">
         <section id="home">
             <img src="./assets/images/profile.jpg" alt="profileAF" class="hello-pic" />
-            <h2 class="greeting">courtney ashley farzam</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="text-wrapper">
+                <h2>courtney ashley farzam</h2>
+                <p>web development | graphic design </p>
+            </div>
         </section>
     </div>
 
-    <div class="page-two">
+    <div id="page-two">
+        <h2>yoooooo</h2>
         <section id="about">
-            <h2 class="bio-elements">yoooooo</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
     
-    <div class="page-three">
-        <section id="portfolio">
-            <h2 class="portfolio-elements">my work</h2>
-                <a href="https://github.com/cmash93" target="blank"><img src="./assets/images/coding.jpg" alt="codingAF" class="github" /></a>
-                    <div class="github-text">
-                    <h3>GitHub</h3>
-                    </div>
-                <a href="#" target="blank"><img src="./assets/images/placeholder3.jpg" alt="placeholder1" class="placeholder-one" /></a>
-                    <div class="placeholder-text-one">
-                    <h3>TBD</h3>
-                    </div>
-                <a href="#" target="blank"><img src="./assets/images/placeholder1.jpg" alt="placeholder2" class="placeholder-two" /></a>
-                    <div class="placeholder-text-two">
-                    <h3>TBD</h3>
-                    </div>
-        </section>
-    </div>
+    <section id="page-three">
+        <h2>my work</h2>
+        <div id="portfolio">
 
-    <div class="page-four">
+                <a href="https://github.com/cmash93" target="blank" class="gallery-link-one">
+                    <h3>GitHub</h3>
+                </a>
+                <a href="#" target="blank" class="gallery-link-two">
+                    <h3>TBD</h3>
+                </a>
+                <a href="#" target="blank" class="gallery-link-three">
+                    <h3>TBD</h3>
+                </a>
+        </div>       
+    </section>
+
+
+    <div id="page-four">
+        <h2>yooooooo</h2>
         <section id="contact">
-            <h2 class="contact-me">yooooooo</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
