changed nav links

--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
     <nav>
        <img src="./assets/images/logo.png" class="logo" />
         <ul>
-            <li><a href="#home-link">home</a></li>
-            <li><a href="#about-link">about</a></li>
-            <li><a href="#port-link">my work</a></li>
-            <li><a href="#contact-link">contact</a></li>
+            <li><a href="#page-one">home</a></li>
+            <li><a href="#page-two">about</a></li>
+            <li><a href="#page-three">my work</a></li>
+            <li><a href="#page-four">contact</a></li>
         </ul>
     </nav>
 
     <main>
-
-    <div id="home-link">This is gonna be hidden so that my navigation works better....hopefully. yay!</div>    
+   
 
     <div id="page-one">
         <section id="home">
@@ -42,8 +41,6 @@
         </section>
     </div>
 
-    <div id="about-link">This is gonna be hidden so that my navigation works better....hopefully. yay!</div>
-
 
     <div id="page-two">
         <h2>about me</h2>
@@ -51,8 +48,6 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     </div>
-
-    <div id="port-link">This is gonna be hidden so that my navigation works better....hopefully. yay!</div>
 
     
     <section id="page-three">
@@ -71,7 +66,6 @@
         </div>       
     </section>
 
-    <div id="contact-link">This is gonna be hidden so that my navigation works better....hopefully. yay! </div>
 
     <div id="page-four">
         <h2>contact me</h2>
