added contact form and filled in information in my about section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,25 @@
 
     <div id="page-two">
         <h2>about me</h2>
-        <section id="about">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <section id="about justify-content">
+            <figure class="education">
+                <h3>education</h3>
+                <div class="info">
+                    <p>I graduated from Rhodes College in Memphis, TN with a Bachelor of Fine Art in Music. I've since decided to change career paths and dive into the world of web development. I've always considered music to be its own language, and I'm excited to now learn the languages involved in web development!</p>
+                </div>
+            </figure>
+            <figure class="location">
+                <h3>location</h3>
+                <div class="info">
+                    <p>I'm a Memphis native who now resides in Nashville, TN. My future plans consist of traveling around the country to learn more about what lies outside of Tennessee.</p>
+                </div>
+            </figure>
+            <figure class="Experience">
+                <h3>experience</h3>
+                <div class="info">
+                    <p>TBD</p>
+                </div>
+            </figure>
         </section>
     </div>
 
@@ -70,7 +87,28 @@
     <div id="page-four">
         <h2>contact me</h2>
         <section id="contact">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <form>
+                <ul>
+                  <li>
+                    <label class="label-text">Name:</label>
+                    <input type="text" id="name" name="user-name">
+                  </li>
+                  <li>
+                    <label class="label-text">Email:</label>
+                    <input type="text" id="email" name="user-email">
+                  </li>
+                </ul>
+                <div class="submit-button">
+                  <button type="submit">SEND</button>
+                </div>
+              </form>    
+              <div class="contact-directly">
+              <p>Please feel free to submit a contact request or contact me directly via phone or email!</p>
+              <ul>
+                <li>Email: cmash93@gmail.com</li>
+                <li>Phone: 901-828-6435</li>
+              </ul>
+              </div>
         </section>
     </div>
 
