added some padding in the about section

--- a/index.html
+++ b/index.html
@@ -45,23 +45,17 @@
     <div id="page-two">
         <h2>about me</h2>
         <section id="about justify-content">
-            <figure class="education">
+            <figure class="info">
                 <h3>education</h3>
-                <div class="info">
                     <p>I graduated from Rhodes College in Memphis, TN with a Bachelor of Fine Art in Music. I've since decided to change career paths and dive into the world of web development. I've always considered music to be its own language, and I'm excited to now learn the languages involved in web development!</p>
-                </div>
             </figure>
-            <figure class="location">
+            <figure class="info">
                 <h3>location</h3>
-                <div class="info">
                     <p>I'm a Memphis native who now resides in Nashville, TN. My future plans consist of traveling around the country to learn more about what lies outside of Tennessee.</p>
-                </div>
             </figure>
-            <figure class="Experience">
+            <figure class="info">
                 <h3>experience</h3>
-                <div class="info">
                     <p>TBD</p>
-                </div>
             </figure>
         </section>
     </div>
