added media queries to make my page more responsive

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="about justify-content">
             <figure class="info">
                 <h3>education</h3>
-                    <p>I graduated from Rhodes College in Memphis, TN with a Bachelor of Fine Art in Music. I've since decided to change career paths and dive into the world of web development. I've always considered music to be its own language, and I'm excited to now learn the languages involved in web development!</p>
+                    <p>I graduated from Rhodes College in Memphis, TN with a B.A. in Music. I've since decided to change career paths and dive into the world of web development. I've always considered music to be its own language, and I'm excited to now learn the languages involved in web development!</p>
             </figure>
             <figure class="info">
                 <h3>location</h3>
@@ -61,9 +61,9 @@
     </div>
 
     
-    <section id="page-three">
+    <div id="page-three">
         <h2>my work</h2>
-        <div id="portfolio">
+        <section id="portfolio">
 
                 <a href="https://github.com/cmash93" target="blank" class="gallery-link-one">
                     <h3>GitHub</h3>
@@ -74,8 +74,8 @@
                 <a href="#" target="blank" class="gallery-link-three">
                     <h3>TBD</h3>
                 </a>
-        </div>       
-    </section>
+            </section>       
+        </div>
 
 
     <div id="page-four">
@@ -99,8 +99,10 @@
               <div class="contact-directly">
               <p>Please feel free to submit a contact request or contact me directly via phone or email!</p>
               <ul>
-                <li>Email: cmash93@gmail.com</li>
-                <li>Phone: 901-828-6435</li>
+                <li>Email: 
+                <li>cmash93@gmail.com</li>
+                <li>Phone:</li>
+                <li>(901)-828-6435</li>
               </ul>
               </div>
         </section>
