added proper alt messages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  
         <!-- Navigation -->
     <nav>
-       <img src="./assets/images/logo.png" class="logo" />
+       <img src="./assets/images/logo.png" class="logo" alt="multi-colored 'C' logo">
         <ul>
             <li><a href="#page-one">home</a></li>
             <li><a href="#page-two">about</a></li>
@@ -33,7 +33,7 @@
 
     <div id="page-one">
         <section id="home">
-            <img src="./assets/images/profile.jpg" alt="profileAF" class="hello-pic" />
+            <img src="./assets/images/profile.jpg" alt="Courtney in home office with purple background" class="hello-pic">
             <div class="text-wrapper">
                 <h2>courtney ashley farzam</h2>
                 <p>web development | graphic design </p>
@@ -65,13 +65,13 @@
         <h2>my work</h2>
         <section id="portfolio">
 
-                <a href="https://github.com/cmash93" target="blank" class="gallery-link-one">
+                <a href="https://github.com/cmash93" target="blank" class="gallery-link-one" alt="abstract photo of multicolored coding">
                     <h3>GitHub</h3>
                 </a>
-                <a href="#" target="blank" class="gallery-link-two">
+                <a href="#" target="blank" class="gallery-link-two" alt="multicolored image of computer themed logos">
                     <h3>TBD</h3>
                 </a>
-                <a href="#" target="blank" class="gallery-link-three">
+                <a href="#" target="blank" class="gallery-link-three" alt="blue and purple image of email icons">
                     <h3>TBD</h3>
                 </a>
             </section>       
