made my email and phone number links instead of listing directly

--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
                 <div class="contact-directly">
                 <p>Please feel free to submit a contact request or contact me directly via phone or email!</p>
                 <ul>
-                    <li>Email: 
-                    <li>cmash93@gmail.com</li>
-                    <li>Phone:</li>
-                    <li>(901)-828-6435</li>
+                    <li><a href= "mailto: cmash93@gmail.com">email</a></li>
+                    <li><a href="tel:(901)-828-6435">call</a></li>
                 </ul>
                 </div>
             </section>
