added new projects to my work

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             <h2>my work</h2>
             <section id="portfolio">
 
-                    <a href="https://github.com/cmash93" target="blank" class="gallery-link-one" alt="abstract photo of multicolored coding">
-                        <h3>GitHub</h3>
+                    <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-one" alt="abstract photo of multicolored coding">
+                        <h3>Weather</h3>
                     </a>
-                    <a href="#" target="blank" class="gallery-link-two" alt="multicolored image of computer themed logos">
-                        <h3>TBD</h3>
+                    <a href="cmash93.github.io/Randamu/" target="blank" class="gallery-link-two" alt="randamu website">
+                        <h3>Randamu</h3>
                     </a>
-                    <a href="#" target="blank" class="gallery-link-three" alt="blue and purple image of email icons">
-                        <h3>TBD</h3>
+                    <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-three" alt="real time weather app">
+                        <h3>JS Quiz</h3>
                     </a>
                 </section>       
             </div>
