--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="cmash93.github.io/Randamu/" target="blank" class="gallery-link-two" alt="randamu website">
                         <h3>Randamu</h3>
                     </a>
-                    <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-three" alt="real time weather app">
+                    <a href="https://cmash93.github.io/Javascript-Quiz-Game/" target="blank" class="gallery-link-three" alt="real time weather app">
                         <h3>JS Quiz</h3>
                     </a>
                 </section>       
