added github link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="text-wrapper">
                     <h2>courtney ashley farzam</h2>
                     <p>web development | graphic design </p>
+                    
                 </div>
             </section>
         </div>
@@ -101,8 +102,9 @@
                 <div class="contact-directly">
                 <p>Please feel free to submit a contact request or contact me directly via phone or email!</p>
                 <ul>
-                    <li><a href= "mailto: cmash93@gmail.com">email</a></li>
+                    <li><a href="mailto: cmash93@gmail.com">email</a></li>
                     <li><a href="tel:(901)-828-6435">call</a></li>
+                    <li><a href="https://github.com/cmash93">github</a></li>
                 </ul>
                 </div>
             </section>
