--- a/index.html
+++ b/index.html
@@ -68,15 +68,19 @@
             <h2>my work</h2>
             <section id="portfolio">
 
-                    <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-one" alt="abstract photo of multicolored coding">
-                        <h3>Weather</h3>
+                    <a href="https://cmash93.github.io/The-Port-Resort/" target="blank" class="gallery-link-one" alt="portfolio sample from The Port Resort">
+                        <h3>The Port Resort</h3>
                     </a>
                     <a href="cmash93.github.io/Randamu/" target="blank" class="gallery-link-two" alt="randamu website">
                         <h3>Randamu</h3>
                     </a>
-                    <a href="https://cmash93.github.io/Javascript-Quiz-Game/" target="blank" class="gallery-link-three" alt="real time weather app">
-                        <h3>JS Quiz</h3>
+                    <a href="https://cmash93.github.io/caffeine-and-coding/" target="blank" class="gallery-link-three" alt="all white blog">
+                        <h3>Blog</h3>
                     </a>
+                    <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-four" alt="gif of weather website">
+                        <h3>Weather</h3>
+                    </a>
+
                 </section>       
             </div>
 
