--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             <h2>my work</h2>
             <section id="portfolio">
 
-                    <a href="https://cmash93.github.io/The-Port-Resort/" target="blank" class="gallery-link-one" alt="portfolio sample from The Port Resort">
+                    <a href="https://mighty-plateau-36759.herokuapp.com/" target="blank" class="gallery-link-one" alt="portfolio sample from The Port Resort">
                         <h3>The Port Resort</h3>
                     </a>
-                    <a href="cmash93.github.io/Randamu/" target="blank" class="gallery-link-two" alt="randamu website">
+                    <a href="https://cmash93.github.io/Randamu/" target="blank" class="gallery-link-two" alt="randamu website">
                         <h3>Randamu</h3>
                     </a>
-                    <a href="https://cmash93.github.io/caffeine-and-coding/" target="blank" class="gallery-link-three" alt="all white blog">
+                    <a href="https://desolate-dusk-37866.herokuapp.com/" target="blank" class="gallery-link-three" alt="all white blog">
                         <h3>Blog</h3>
                     </a>
                     <a href="https://cmash93.github.io/Real-Time-Weather/" target="blank" class="gallery-link-four" alt="gif of weather website">
